urpc/internal/core/analysis/testdata/errors/spreads/undefined_spread.ufo
// @expect: E202

type User {
	...UndefinedBase
	name: string
}
